--- a/analyse.html
+++ b/analyse.html
@@ -4,6 +4,16 @@
         <!--Brukt kode som Ann-Charlott Beatrice Karlsen har vist i forelesninger-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
+        <meta name="author" content="Mina Molvik Engen">
+        <!--Meta-tags-->
+        <meta property="og:url" content="https://itstud.hiof.no/~miname/oblig_3/" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="FLIP" />
+        <meta property="og:description" content="Website for women shoes." />
+        <meta property="og:image" content="https://img01.ztat.net/article/spp-media-p1/f4440c19585041859ab2114f0cd8ec2f/46b9a234226f4766b677b921baa352a3.jpg?imwidth=1800&filter=packshot" />
+        <meta name="description" content="FLIP - nettbutikk for sneakers, boots og sko til herrer, damer og barn. Vi har gode priser til gode betingelser. Leverer hurtig til hele landet">
+        <meta name="keywords" content="Sneakers, Tøfler, Boots, Nike, Adidas, Veja, Puma">
+
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" type="text/css">
         <link href="css/font/css/fontawesome.css" rel="stylesheet">
         <link href="css/font/css/brands.css" rel="stylesheet">
@@ -100,11 +110,35 @@
                     <h2>Skjermleserkompatibilitet</h2>
                     <p>Datamaskinen kan lese opp teksten og bildene som er på nettsiden.</p>
                 </section>
+                <!--Seksjon for snarvei til innhold-->
+                <section class="snarvei">
+                    <h2>Snarvei til hovedinnhold</h2>
+                    <img src="img/snarvei.png" alt="Bilde av starten av koden for snarvei til hovedinnholdet">
+                    <p>Kode for snarvei til hovedinnhold. Det gjør slik at man kan hoppe over header, og gå rett til main for å se på innholdet av nettsiden. Denne koden står øverst i header og blir vist på toppen i nettsiden.</p>
+                    <img src="img/snarvei2.png" alt="Bilde av slutten av koden for snarvei til hovedinnholdet.">
+                    <p>Kode for snarvei til hovedinnholdet. denne koden er på slutten av header og er der man blir flyttet til når mna trykker på knappen øverst på nettsiden.</p>
+                </section>
+                <!--Seksjon for ARIA-attributter-->
+                <section>
+                    <h2>ARIA-attributter</h2>
+                    <img src="img/aria1_navigasjon.png" alt="Bilde av ARIA i koden på sidene mine.">
+                    <p>ARIA i navigasjonsfeltet mitt på alle sidene.</p>
+                    <img src="img/aria2_main.png" alt="Bilde av ARIA i kode på sidene mine.">
+                    <p>ARIA i main området mitt på alle sidene.</p>
+                    <img src="img/aria3_footer.png" alt="Bilde av ARIA i kode på sidene mine.">
+                    <p>ARIA i footer området mitt på alle sidene.</p>
+                </section>
                 <!--Seksjon for microdata-->
                 <section class="microdata">
                     <h2>Microdata ig Rich Results</h2>
                     <img src="img/rich_results.png" alt="Bilde av testresultatene fra rich results.">
-
+                    <p>Jeg fikk ingen error på microdata og rich results. Det eneste var at jeg hadde to "ikke-kritiske problemer" med teksutdrag om produkter og selgeroppføringer.</p>
+                </section>
+                <!--Seksjon for meta og SOME-->
+                <section>
+                    <h2>Meta-tags</h2>
+                    <img src="img/metatag1.png" alt="Bilde av koden for metatags">
+                    <p>Meta for SOME og metabeskrivelser med de relevante søkeordene.</p>
                 </section>
             </main>
         </div>
