--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
         <!--Brukt kode som Ann-Charlott Beatrice Karlsen har vist i forelesninger-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
+        <meta name="author" content="Mina Molvik Engen">
         <!--Meta-tags-->
         <meta property="og:url" content="https://itstud.hiof.no/~miname/oblig_3/" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="FLIP" />
         <meta property="og:description" content="Website for women shoes." />
         <meta property="og:image" content="https://img01.ztat.net/article/spp-media-p1/f4440c19585041859ab2114f0cd8ec2f/46b9a234226f4766b677b921baa352a3.jpg?imwidth=1800&filter=packshot" />
+        <meta name="description" content="FLIP - nettbutikk for sneakers, boots og sko til herrer, damer og barn. Vi har gode priser til gode betingelser. Leverer hurtig til hele landet">
+        <meta name="keywords" content="Sneakers, Tøfler, Boots, Nike, Adidas, Veja, Puma">
 
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" type="text/css">
         <link href="css/font/css/fontawesome.css" rel="stylesheet">
@@ -65,7 +68,7 @@
                 <img src="img/forside-stort.jpg" alt="bilde av dame med svarte boots">
                 <section class="text-main-campaign">
                     <h1>NEW ARRIVALS</h1>
-                    <p>Bli klar for hørsten med lekre nyheter</p>
+                    <p>Bli klar for høsten med lekre nyheter</p>
                     <a href="#" class="beige-btn">Shop nyheter <i class="fa-solid fa-arrow-right"></i></a>
                 </section>
             </section>
